2017-12-06  Sam Steingold  <sds@gnu.org>

	* emacs/d-mode.el (d-extra-keywords): Add "unused".
	* array.d, encoding.d, foreign.d, funarg.d, io.d, pathname.d,
	* sequence.d, socket.d, spvw.d, spvw_garcol.d, spvw_garcol_old.d,
	* spvw_mmap.d, spvw_sigint.d, spvw_sigpipe.d, spvw_sigsegv.d,
	* spvw_sigwinch.d, stream.d, time.d, gctrigger.c: Code cleanup:
	use "unused(V)" instead of "(void)V".

2017-12-06  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (handle_fault_range) [!(GENERATIONAL_GC & SPVW_MIXED)]:
	Expand non-trivially to avoid -Wunused-parameter.

2017-12-06  Sam Steingold  <sds@gnu.org>

	* makemake.in (LIBS): Add LIBUNISTRING like LIBSIGSEGV. Fix bug#719.

2017-12-06  Sam Steingold  <sds@gnu.org>

	Make sure the Darwin foo.dSYM directories are removed by clean et al.
	* makemake.in (exefiles, EXERM): New variables.
	Used throughout to ensure removal of .dSYM. Cf. patch#50.

2017-12-05  Jörg Höhle  <hoehle@users.sourceforge.net>

	* loop.lisp (destructure-type): In LOOP destructuring, type NIL
	originally meant: "Skip type declaration for this variable" (patch#53).

2017-12-05  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (print-tables-2): Do not output unnecessary
	prototypes, but output code to avoid the -Wunused-parameter warning.
	Similar to the 2017-11-29 foreign1.lisp patch.

2017-12-05  Ken Brown  <kbrown@cornell.edu>

	* encoding.d (encoding_from_name) [UNIX_CYGWIN]: Use Unix line
	endings (patch#47).

2017-12-04  Jörg Höhle  <hoehle@users.sourceforge.net>

	* modules/regexp/regexi.c (REGEXP-COMPILE, REGEXP-EXEC) [UNICODE]:
	Use UTF-8 to communicate with gnulib/regexp, but keep
	O(misc_encoding) for locale-dependent error messages.

2017-12-04  Jörg Höhle  <hoehle@users.sourceforge.net>

	* modules/regexp/regexi.c (REGEXP-EXEC): Compute character string
	index based on the current O(misc_encoding).

2017-12-04  Sam Steingold  <sds@gnu.org>

	* configure.in: Move gl_EARLY before AC_LIB_PROG_LD to avoid aclocal